--- a/index.html
+++ b/index.html
@@ -932,7 +932,7 @@ button.swiper-pagination-bullet { border: none; margin: 0px; padding: 0px; box-s
     <section class="base2">
         <div class="container">
             <div class="base2__content wow animate__bounceIn" data-aos-delay="3000" style="visibility: visible; animation-name: bounceIn;">
-                <div class="content__title">Buy using Jupiter:</div>
+                <div id="claim-button" class="content__title">Connect Wallet</div>
                 <div class="content__text"> Already have $SOL in your wallet? Swap using Jupiter below. </div>
             </div>
 
